--- a/src/styles/addboard.css
+++ b/src/styles/addboard.css
@@ -76,6 +76,14 @@ button:hover .ql-stroke,
   margin-right: 0px;
 }
 
+.ql-editor.ql-blank::before {
+  left: 0 !important;
+}
+
+.ql-editor {
+  padding: 0;
+}
+
 @media screen and (min-width: 481px) {
   .quill > .ql-toolbar.ql-snow > .ql-formats {
     button {
