--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @import "./reset.css";
+@import "./addboard.css";
 
 @layer base {
   .board-tr {
@@ -75,6 +76,11 @@
   font-weight: 900;
   font-style: normal;
 }
-input:focus {
-  outline: none;
+
+.ql-editor em,
+.ql-editor i {
+  font-style: italic;
+  input:focus {
+    outline: none;
+  }
 }
