✨feat(markdown): 마크다운 스타일 수정

--- a/src/styles/addboard.css
+++ b/src/styles/addboard.css
@@ -114,3 +114,15 @@ button:hover .ql-stroke,
     gap: 8px;
   }
 }
+
+.ql-align-center {
+  text-align: center;
+}
+
+.ql-align-right {
+  text-align: right;
+}
+
+.ql-align-left {
+  text-align: left;
+}
