--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,9 @@
 @tailwind utilities;
 @import "./reset.css";
 @import "./addboard.css";
-
+input:focus {
+  outline: none;
+}
 @layer base {
   .board-tr {
     @apply gap-[3px] sm:grid sm:grid-cols-[30px,1fr,280px] sm:gap-[50px] sm:px-5 lg:grid-cols-[30px,1fr,340px] lg:gap-20 lg:px-[50px];
