🐛 Fix: 기타 버그 수정 1

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -86,3 +86,30 @@ input:focus {
     outline: none;
   }
 }
+
+/* custom web scrollbar css settings */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #888;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #000;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+body {
+  &::-webkit-scrollbar-button:vertical:start:decrement,
+  &::-webkit-scrollbar-button:vertical:start:increment {
+    display: block;
+    height: 27px;
+  }
+}
