♻️ Refactor: 에디터 추가

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -113,3 +113,11 @@ body {
     height: 27px;
   }
 }
+
+.ck-editor__editable {
+  height: 400px !important;
+  max-height: 400px !important;
+}
+
+.ck-editor__editable:focus {
+}
