Merge: 최신 브랜치와 머지

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -114,10 +114,78 @@ body {
   }
 }
 
+:root {
+  --ck-clipboard-drop-target-color: green;
+}
+
+.ck-toolbar,
+.ck-editor__editable {
+  width: 100%;
+  max-width: 100%;
+}
+
 .ck-editor__editable {
   height: 400px !important;
   max-height: 400px !important;
 }
 
-.ck-editor__editable:focus {
+.ck-balloon-panel {
+  display: none !important;
+}
+
+.ck-focused {
+  border-color: var(--ck-color-base-border) !important;
+}
+
+.ck.ck-content ul,
+.ck.ck-content ol {
+  /* Default user agent stylesheet, you can change it to your needs. */
+  padding-left: 40px;
+}
+
+.ck.ck-content > :first-child {
+  margin-top: 0;
+}
+
+.ck.ck-content h1 {
+  display: block;
+  font-size: 2.36em;
+  line-height: 1.33em;
+  &:first-of-type {
+    width: 100%;
+    padding-top: 0.5em;
+  }
+}
+
+.ck.ck-content h2 {
+  font-size: 1.68em;
+  line-height: 1.68em;
+  padding-top: 0.8em;
+  margin-bottom: 0.4em;
+  padding-bottom: 0.2em;
+  border-bottom: 1px solid #e9e9e9;
+  font-weight: 400;
+  &:first-of-type {
+    clear: both;
+  }
+}
+
+.ck.ck-content h3 {
+  font-size: 1.36em;
+  line-height: 1.5em;
+  padding-top: 0.8em;
+  margin-bottom: 0.2em;
+  font-weight: 400;
+}
+
+.ck.ck-content h4 {
+  font-size: 1em;
+  line-height: 1.2em;
+  padding-top: 0.6em;
+  margin-bottom: 0.1em;
+  font-weight: 400;
+}
+
+.ck.ck-content i {
+  font-style: oblique 50deg;
 }
