--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -163,7 +163,6 @@ body {
   padding-top: 0.8em;
   margin-bottom: 0.4em;
   padding-bottom: 0.2em;
-  border-bottom: 1px solid #e9e9e9;
   font-weight: 400;
   &:first-of-type {
     clear: both;
@@ -187,5 +186,47 @@ body {
 }
 
 .ck.ck-content i {
+  font-style: oblique 50deg;
+}
+
+.yu h1 {
+  display: block;
+  font-size: 2.36em;
+  line-height: 1.33em;
+  &:first-of-type {
+    width: 100%;
+    padding-top: 0.5em;
+  }
+}
+
+.yu h2 {
+  font-size: 1.68em;
+  line-height: 1.68em;
+  padding-top: 0.8em;
+  margin-bottom: 0.4em;
+  padding-bottom: 0.2em;
+  font-weight: 400;
+  &:first-of-type {
+    clear: both;
+  }
+}
+
+.yu h3 {
+  font-size: 1.36em;
+  line-height: 1.5em;
+  padding-top: 0.8em;
+  margin-bottom: 0.2em;
+  font-weight: 400;
+}
+
+.yu h4 {
+  font-size: 1em;
+  line-height: 1.2em;
+  padding-top: 0.6em;
+  margin-bottom: 0.1em;
+  font-weight: 400;
+}
+
+.yu i {
   font-style: oblique 50deg;
 }
